change category page and change comment

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -4,6 +4,7 @@
 }
 body{
     background:#eee;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
 }
 .nav-container{
     background:#FF4949;
